--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,20 @@ dynamic = ["version"]
 description = "Python template project"
 readme = "README.md"
 
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 license = { file = "LICENSE.txt" }
 keywords = ["sample", "setuptools", "development"]
 classifiers = [
     "Programming Language :: Python :: 3",
 ]
-dependencies = ['numpy']
+dependencies = [
+    'numpy<2.0.0',
+    "flask",
+    "pillow",
+    "diffusers",
+    "torch",
+    "deepspeed"
+]
 [project.optional-dependencies]
 test = ['pytest']
 analyze = ['pyright', 'pylint', 'bandit', 'black', 'isort']
