--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,9 @@ where = ["src"]
 
 [tool.setuptools.package-data]
 text2image_ms = ["py.typed"]
+
+[tool.isort]
+profile = "black"
+
+[tool.pylint.'MESSAGES CONTROL']
+disable = "wrong-import-order"
