--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,9 +1,6 @@
-model: "runwayml/stable-diffusion-v1-5"
-dtype: "float32"
-device: "cuda:0"
-safety_checker: 
-requires_safety_checker: True
-low_cpu_mem_usage: False
+defaults:
+  - diffusion_config: default
+  - gui_config: default
 
 hydra:
   job:
