--- a/conf/diffusion_config/default.yaml
+++ b/conf/diffusion_config/default.yaml
@@ -3,8 +3,4 @@ dtype: "float32"
 device: "cuda:0"
 safety_checker: 
 requires_safety_checker: True
-low_cpu_mem_usage: False
-
-hydra:
-  job:
-    chdir: false
+low_cpu_mem_usage: True
